[project]
name = "task-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "exathan", email = "exathan@proton.me" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
task-cli = "task_cli:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
